--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,15 @@
         "plugin:import/errors",
         "plugin:import/warnings"
     ],
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "paths": [
+                    "./src"
+                ]
+            }
+        }
+    },
     "env": {
         "browser": true,
         "es6": true
@@ -14,13 +23,24 @@
     },
     "rules": {
         "strict": 0,
-        "indent": [2, 4],
-        "max-len": [2, 200, 2,
+        "indent": [
+            2,
+            4
+        ],
+        "max-len": [
+            2,
+            200,
+            2,
             {
                 "ignoreUrls": true,
                 "ignoreComments": true
-            }],
-        "quotes": [2, "single", "avoid-escape"],
+            }
+        ],
+        "quotes": [
+            2,
+            "single",
+            "avoid-escape"
+        ],
         "no-shadow": 1
     }
 }
