--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "gulp",
-    "production": "gulp --production"
+    "webpack": "node ./babel/startup.dev.js",
+    "production": "gulp --production",
+    "webpack-production": "node node_modules/webpack/bin/webpack.js --verbose --colors --display-error-details --config webpack/webpack.prod.config.babel.js"
   },
   "repository": {
     "type": "git",
@@ -15,23 +17,33 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.2.0",
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "colors": "^1.1.2",
+    "colour": "^0.7.1",
+    "copy-webpack-plugin": "^3.0.1",
     "del": "^2.2.2",
-    "eslint": "^3.3.1",
+    "eslint": "^3.4.0",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.14.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
-    "gulp-if": "^2.0.0",
+    "gulp-if": "^2.0.1",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0",
     "yargs": "^4.6.0"
   },
   "dependencies": {
-    "phaser": "^2.6.1"
+    "phaser": "^2.6.2"
   }
 }
